# tap-dg-ice

./: .gitignore  README.md  meltano.yml  pyproject.toml  tap-dg-ice.sh  tox.ini
tap_dg_ice/: client.py  complete_streams.py  getSecondaryRevenue.py  streams.py  tap.py  timestamped_streams.py
tap_dg_ice/tests/: __init__.py  test_core.py
